--- a/package.json
+++ b/package.json
@@ -39,7 +39,20 @@
       "core-js": "npm:core-js@^1.1.4"
     }
   },
+  "browserify": {
+    "transform": [
+      "browserify-shim",
+      "babelify"
+    ]
+  },
+  "browserify-shim": {
+    "angular": "global:angular"
+  },
   "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babelify": "^7.2.0",
+    "browserify-shim": "^3.8.12",
     "jasmine-core": "^2.4.1",
     "jspm": "^0.16.15",
     "karma": "^0.13.15",
